Added tabs to show different posts, and created scopes on Post model

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -54,7 +54,7 @@
             <%= render :partial => 'datalist' %>
           </div>
         <% elsif params[:view]== "list" %>
-          <table class="table table-bordered" id="contact_list">
+          <table class="table table-condensed table-bordered" id="contact_list">
             <thead>
               <tr>
                 <th>Name</th>
