--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,39 +6,64 @@
           <h1 class="page-header-text">Posts</h1>
           <%= add_new_btn(new_post_path) %>
         </div>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Contact By</th>
-                <th>Contact</th>
-                <th>Company</th>
-                <th>Subject</th>
-                <th>Type</th>
-                <th>Body</th>
-                <th>Action Items</th>
-                <th>Complete</th>
-                <th></th>
-              </tr>
-            </thead>
+        
+        <div class="tabbable">
+          <ul class="nav nav-pills">
+            <li class="active"><a href="#pane1" data-toggle="tab">All</a></li>
+            <li><a href="#pane2" data-toggle="tab">John</a></li>
+            <li><a href="#pane3" data-toggle="tab">Wayne</a></li>
+            <li><a href="#pane4" data-toggle="tab">Not Complete</a></li>
+          </ul>
+          
+          <div class="tab-content">
+            <div id="pane1" class="tab-pane active">
+               <table class="table table-condensed table-striped">
+                <%= render :partial => 'header' %>
 
-            <tbody>
-              <% @posts.each do |post| %>
-                <tr>
-                  <td><%= post.user.display_name %></td>
-                  <td><%= post.contact.last_name %>, <%= post.contact.first_name %></td>
-                  <td><%= post.contact.company %></td>
-                  <td><%= post.title %></td>
-                  <td><%= post.contact_type.name %></td>
-                  <td><%= post.body %></td>
-                  <td><%= post.action_item %></td>
-                  <td><%= post.complete ? 'Yes' : 'No' %></td>
-                  <td><%= link_to 'Show', post, class: "btn btn-primary"%></td>
-                  <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-primary" %></td>
-                  <td><%= link_to 'Destroy', post, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
+                <tbody>
+                  <% @posts.each do |post| %>
+                    <%= render :partial => 'data' , locals:{post:post} %>
+                  <% end %>
+                </tbody>
+              </table>
+
+            </div>
+            <div id="pane2" class="tab-pane">
+              <table class="table table-condensed table-striped">
+                <%= render :partial => 'header' %>
+
+                <tbody>
+                  <% Post.john.each do |post| %>
+                    <%= render :partial => 'data' , locals:{post:post} %>
+                  <% end %>
+                </tbody>
+              </table>
+              
+            </div>
+            <div id="pane3" class="tab-pane">
+              <table class="table table-condensed table-striped">
+                <%= render :partial => 'header' %>
+
+                <tbody>
+                  <% Post.wayne.each do |post| %>
+                    <%= render :partial => 'data' , locals:{post:post} %>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+            <div id="pane4" class="tab-pane">
+              <table class="table table-condensed table-striped">
+                <%= render :partial => 'header' %>
+
+                <tbody>
+                  <% Post.not_complete.each do |post| %>
+                    <%= render :partial => 'data' , locals:{post:post} %>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div><!-- /tab-content -->
+        </div><!-- /tabbable -->
 
           <br>
 
