--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : "Contacts Manager" %></title>
 	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -32,9 +32,9 @@
 			</div>	
 		</div>
 	</div>
-	<%= yield :scripts %>
+	<%#= yield :scripts %>
 	
-	
+	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
 </body>
 </html>
