--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,11 +28,12 @@
     <%= f.select(:contact_type_id, ContactType.all.map{|t| [ t.name,t.id]}, include_blank: "Select a contact type")%>
   </div>
   <div class="field">
+    <%= @post.contact_date %>
     <%= f.label :contact_date %>
     <%#= f.text_field :contact_date, :readonly => true, value: Date.today %>
-    <div class="input-append date" id="dp3" data-date-format="dd-mm-yyyy">
-      <%= f.text_field :contact_date, :readonly => true %><span class="add-on"><i class="icon-th"></i></span>
-      </div>
+    <div class="input-append date" id="dp3" data-date-format="yyyy-mm-dd">
+      <%= f.text_field :contact_date, value: date_value(@post.contact_date),:readonly => true %><span class="add-on"><i class="icon-th"></i></span>
+    </div>
   </div>
 
   <div class="field">
